# VariantFeatures

./: .gitignore  1  CLAUDE.md  PIPELINE.md  README.md  STATUS_SYNC.md  TASKS.md  pyproject.toml  run_cli.py  test_alphamissense.py  test_build.py  test_build_direct.py  test_cli.py  test_gnomad.py  test_gnomad_full.py
scripts/: load_clinvar.py  load_clinvar_fast.py  load_kcnh2_scores.py
variantfeatures/: __init__.py  __main__.py  cli.py  database.py
variantfeatures/fetchers/: __init__.py  alphamissense.py  cadd.py  clinvar.py  gnomad.py  lof.py  revel.py
