[project]
name = "variantfeatures"
version = "0.1.0"
description = "Aggregate predictive features for genetic variants into SQLite"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "pandas>=2.0",
    "tqdm>=4.65",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
variantfeatures = "variantfeatures.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
